<resources>
    <string name="app_name">Student Manager SQLite</string>
    <string name="context_menu_detail">Chi tiết</string>
    <string name="context_menu_edit">Sửa</string>
    <string name="context_menu_delete">Xóa</string>
    <string name="activity_main_textView1">Đang tải...</string>
    <string name="activity_main_textView2">Phát triển bởi Hai Nguyen</string>
    <string name="input_student_textView1">Nhập thông tin học viên</string>
    <string name="input_student_editText1">Tên học viên</string>
    <string name="input_student_editText2">Mã học viên</string>
    <string name="input_student_editText3">Ngày sinh</string>
    <string name="input_student_editText4">Lớp</string>
    <string name="input_student_editText5">Quê quán</string>
    <string name="input_student_button1">Thêm</string>
    <string name="input_student_button2">Hiển thị</string>
    <string name="input_student_textView2"><u>Thoát?</u></string>
    <string name="empty_student_list_textView">Danh sách học viên rỗng</string>
    <string name="one_student_information_texView1">Thông tin chi tiết học viên</string>
    <string name="one_student_information_texView2">Trường Đại học Công nghiệp Hà Nội</string>
    <string name="all_student_information_textView">Thông tin toàn bộ học viên</string>
</resources>
